[project]
name = "flowshop-tardiness"
version = "0.0.1"
description = "Flow shop scheduling to minimize total tardiness"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "mbls",
    "ortools>=9.14.6206",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "routix",
    "schore",
    "xlsxwriter>=3.2.9",
]
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]

[tool.uv.sources]
routix = { path = "../routix", editable = true }
mbls = { path = "../mbls", editable = true }
schore = { path = "../schore", editable = true }
